Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -241,7 +241,7 @@ uid           [ revoked] sonya <sonya@debian>
 
 ### Шифрование и дешифрование файлов
 
-Во-первых, `ina` должна импортировать открытый ключ Кэрол (`carol.pub.key`) в ее связку ключей, чтобы она могла начать с ним работать:
+Во-первых, `ina` должна импортировать открытый ключ `carol` (`carol.pub.key`) в свою связку ключей, чтобы она могла начать с ним работать:
 
 ```console
 ina@halof:~> gpg --import carol.pub.key
@@ -366,7 +366,7 @@ gpg: Good signature from "carol <carol@debian>" [unknown]
 (...)
 ```
 
-Если вы также хотите прочитать файл, вам нужно расшифровать его в новый файл (в нашем случае сообщение) с помощью параметра `--output`:
+Если вы также хотите прочитать файл, вам нужно расшифровать его в новый файл (в нашем случае `message`) с помощью параметра `--output`:
 
 ```console
 ina@halof:~> gpg --output message --decrypt message.sig
