Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -108,7 +108,7 @@ drwx------ 2 carol carol 4096 Jul  3 23:34 private-keys-v1.d
 Это ваша связка открытых ключей. В нем хранятся ваши собственные, а также любые другие импортированные открытые ключи. 
 
 `trustdb.gpg`  
-База данных доверия. Это связано с концепцией *Web of Trust* (которая выходит за рамки этого урока).
+Доверенная база данных. Это связано с концепцией *Web of Trust* (которая выходит за рамки этого урока).
 
 >С появлением *GnuPG 2.1* были внесены некоторые существенные изменения, такие как исчезновение файлов `secring.gpg` и `pubring.gpg` в пользу `private-keys-v1.d` и `pubring.kbx` соответственно.
 
@@ -488,16 +488,16 @@ Options:
 
 ## Ответы на упражнения для закрепления
 
-1. Заполните таблицу, указав правильное имя файла: 
+**1. Заполните таблицу, указав правильное имя файла:** 
 
-| Описание | Имя файла |
-|:---------|:----------|
-| Доверенная База данных ||
-| Каталог отозванных сертификатов ||
-| Каталог приватных ключей ||
-| Каталог открытых ключей || 
+| Описание                        | Имя файла           |
+|:--------------------------------|:--------------------|
+| Доверенная база данных          | `trustdb.gpg`       |
+| Каталог отозванных сертификатов | `opengp-revocs.d`   |
+| Каталог приватных ключей        | `private-keys-v1.d` |
+| Связка открытых ключей          | `pubring.kbx`       | 
 
-2. Ответьте на следующие вопросы: 
+**2. Ответьте на следующие вопросы:**   
 * Какой тип криптографии использует *GnuPG*? 
 * Каковы два основных компонента криптографии с открытым ключом? 
 * Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`? 
