Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -284,7 +284,7 @@ Use this key anyway? (y/N) y
 Спецификация `USER-ID` получателя (в нашем примере - `carol`). Если не указан, GnuPG запросит его (если не указан `--default-recipient`). 
 
 `--armor`  
-Эта опция производит армированный вывод ASCII, который можно скопировать в электронное письмо. 
+Эта опция производит ASCII совместимый вывод, который можно скопировать в электронное письмо. 
 
 `--encrypt unencrypted-message`  
 Спецификация имени исходного файла для шифрования. Теперь вы можете отправить зашифрованное сообщение `carol` в Debian с помощью `scp`:
@@ -499,42 +499,48 @@ Options:
 
 **2. Ответьте на следующие вопросы:**   
 * Какой тип криптографии использует *GnuPG*? 
+асимметричную криптографию 
 * Каковы два основных компонента криптографии с открытым ключом? 
+Открытый и закрытый ключи
 * Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`? 
+последние 8 символов - `FA7F 54C7`
 * Какой метод используется для распространения открытых ключей на глобальном уровне? 
+метод серверов ключей
 
-3. Поместите следующие шаги в правильном порядке относительно отзыва закрытого ключа: 
+**3. Поместите следующие шаги в правильном порядке относительно отзыва закрытого ключа:**  
 * Сделайте отозванный ключ доступным для ваших корреспондентов. 
 * Создайте сертификат отзыва. 
 * Импортируйте сертификат отзыва в свою связку ключей. 
  
 Правильный порядок: 
-|Шаг 1:||
+|Шаг 1:| Создайте сертификат отзыва. |
 |:--|:--|
-|Шаг 2:|| 
-|Шаг 3:|| 
+|Шаг 2:| Импортируйте сертификат отзыва в свою связку ключей. | 
+|Шаг 3:| Сделайте отозванный ключ доступным для ваших корреспондентов. | 
 
-4. Что касается шифрования файлов, что означает параметр `--armor` в команде `gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message`?
+**4. Что касается шифрования файлов, что означает параметр `--armor` в команде `gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message`?**  
+ASCII совместимый вывод
 
 
 ## Ответы на упражнения для размышления
 
-1. У большинства опций `gpg` есть как длинная, так и короткая версия. Заполните таблицу соответствующей короткой версией: 
+**1. У большинства опций `gpg` есть как длинная, так и короткая версия. Заполните таблицу соответствующей короткой версией:**
 
 | Длинная версия | Короткая версия |
 |:---------------|:----------------|
-| `--armor`      |                 |
-| `--output`     |                 | 
-| `--recipient`  |                 | 
-| `--decrypt`    |                 |
-| `--encrypt`    |                 |
-| `--encrypt`    |                 |
-| `--sign`       |                 |
+| `--armor`      | `-a`            |
+| `--output`     | `-o`            | 
+| `--recipient`  | `-r`            | 
+| `--decrypt`    | `-d`            |
+| `--encrypt`    | `-e`            |
+| `--sign`       | `-s`            |
 
-2. Ответьте на следующие вопросы, касающиеся экспорта ключей: 
+**2. Ответьте на следующие вопросы, касающиеся экспорта ключей:** 
 * Какую команду вы бы использовали для экспорта всех ваших открытых ключей в файл с именем `all.key`? 
+
 * Какую команду вы бы использовали для экспорта всех ваших закрытых ключей в файл с именем `all_private.key`? 
 
-3. Какая опция `gpg` позволяет выполнять большинство задач, связанных с управлением ключами, с помощью меню? 
-4. Какой вариант `gpg` позволяет делать подпись открытым текстом?
+**3. Какая опция `gpg` позволяет выполнять большинство задач, связанных с управлением ключами, с помощью меню?** 
+
+**4. Какой вариант `gpg` позволяет делать подпись открытым текстом?**
 
