Update 110.3 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 2.md
@@ -498,14 +498,14 @@ Options:
 | Связка открытых ключей          | `pubring.kbx`       | 
 
 **2. Ответьте на следующие вопросы:**   
-* Какой тип криптографии использует *GnuPG*? 
-асимметричную криптографию 
-* Каковы два основных компонента криптографии с открытым ключом? 
+* Какой тип криптографии использует *GnuPG*?  
+Криптография с открытым ключом или асимметричная криптография. 
+* Каковы два основных компонента криптографии с открытым ключом?  
 Открытый и закрытый ключи
-* Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`? 
-последние 8 символов - `FA7F 54C7`
+* Что такое `KEY-ID` отпечаток открытого ключа `07A6 5898 2D3A F3DD 43E3 DA95 1F3F 3147 FA7F 54C7`?  
+Последние 8 символов - `FA7F 54C7`
 * Какой метод используется для распространения открытых ключей на глобальном уровне? 
-метод серверов ключей
+Сервера ключей
 
 **3. Поместите следующие шаги в правильном порядке относительно отзыва закрытого ключа:**  
 * Сделайте отозванный ключ доступным для ваших корреспондентов. 
@@ -514,12 +514,12 @@ Options:
  
 Правильный порядок: 
 |Шаг 1:| Создайте сертификат отзыва. |
-|:--|:--|
+|:-----|:--|
 |Шаг 2:| Импортируйте сертификат отзыва в свою связку ключей. | 
 |Шаг 3:| Сделайте отозванный ключ доступным для ваших корреспондентов. | 
 
 **4. Что касается шифрования файлов, что означает параметр `--armor` в команде `gpg --output encrypted-message --recipient carol --armor --encrypt unencrypted-message`?**  
-ASCII совместимый вывод
+Он производит бронированный вывод ASCII, который позволяет скопировать полученный существующий зашифрованный файл в электронное письмо.
 
 
 ## Ответы на упражнения для размышления
@@ -536,11 +536,13 @@ ASCII совместимый вывод
 | `--sign`       | `-s`            |
 
 **2. Ответьте на следующие вопросы, касающиеся экспорта ключей:** 
-* Какую команду вы бы использовали для экспорта всех ваших открытых ключей в файл с именем `all.key`? 
-
+* Какую команду вы бы использовали для экспорта всех ваших открытых ключей в файл с именем `all.key`?  
+`gpg --export --output all.key` или `gpg --export -o all.key`
 * Какую команду вы бы использовали для экспорта всех ваших закрытых ключей в файл с именем `all_private.key`? 
+`gpg --export-secret-keys --output all_private.key` или `gpg --export-secret-keys -o all_private.key` (`--export-secret-keys` можно заменить на `--export-secret-subkeys` с небольшим другой результат - проверьте `man pgp` для получения дополнительной информации).
 
 **3. Какая опция `gpg` позволяет выполнять большинство задач, связанных с управлением ключами, с помощью меню?** 
+`--edit-key`
 
 **4. Какой вариант `gpg` позволяет делать подпись открытым текстом?**
-
+`--clearsign`
