Update 110.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
@@ -10,4 +10,79 @@
 
 ## Введение
 
-В этой главе объясняются четыре основных способа повышения безопасности хоста: Некоторые основные команды и параметры конфигурации для повышения безопасности аутентификации с использованием теневых паролей. Как использовать супердемоны для прослушивания входящих сетевых подключений. Проверка сетевых сервисов на наличие лишних демонов. Обертки TCP как своего рода простой брандмауэр.
+В этой главе объясняются четыре основных способа повышения безопасности хоста: 
+1. Некоторые основные команды и параметры конфигурации для повышения безопасности аутентификации с использованием теневых паролей. 
+2. Как использовать супердемоны для прослушивания входящих сетевых подключений. 
+3. Проверка сетевых сервисов на наличие лишних демонов. 
+4. Обертки TCP как своего рода простой брандмауэр.
+
+
+## Повышение безопасности аутентификации с помощью теневых паролей
+
+Основные компоненты данных учетной записи пользователя хранятся в файле `/etc/passwd`. Этот файл содержит семь полей: имя пользователя, идентификатор пользователя, идентификатор группы, пароль, комментарий (также известный как GECOS), расположение домашнего каталога и, наконец, оболочка по умолчанию. Простой способ запомнить порядок этих полей - подумать о процессе входа пользователя в систему: сначала вы вводите имя для входа, во-вторых, система сопоставляет его с идентификатором пользователя (uid) и, в-третьих, с идентификатором группы (gid). Четвертый шаг запрашивает пароль, пятый ищет комментарий, шестой входит в домашний каталог пользователя, а седьмой шаг устанавливает оболочку по умолчанию. 
+
+Хотя в современных системах пароль больше не хранится в файле `/etc/passwd`. Вместо этого поле пароля содержит только символ `x` в нижнем регистре. Файл `/etc/passwd` должен быть доступен для чтения всем пользователям. Поэтому хранить там пароли - не лучшая идея. Символ `x` указывает, что зашифрованный (хешированный) пароль фактически хранится в файле `/etc/shadow`. Этот файл не должен быть доступен для чтения всем пользователям. 
+
+Параметры пароля настраиваются с помощью команд `passwd` и `chage`. Обе команды изменят запись для пользователя `emma` в файле `/etc/shadow`. Как суперпользователь вы можете установить пароль для пользователя `emma` с помощью следующей команды:
+
+```console
+$ sudo passwd emma
+New password:
+Retype new password:
+passwd: password updated successfully
+```
+
+Затем вам будет дважды предложено подтвердить новый пароль. 
+
+Чтобы перечислить время истечения срока действия пароля и другие параметры истечения срока действия пароля для пользователя `emma`:
+
+```console
+$ sudo chage -l emma
+Last password change					: Apr 27, 2020
+Password expires					: never
+Password inactive					: never
+Account expires						: never
+Minimum number of days between password change		: 0
+Maximum number of days between password change		: 99999
+Number of days of warning before password expires	: 7
+```
+
+Чтобы предотвратить вход пользователя `emma` в систему, суперпользователь может установить дату истечения срока действия пароля, предшествующую текущей дате. Например, если сегодняшняя дата - 27 марта 2020 г., вы можете истечь срок действия пароля пользователя, указав более старую дату:
+
+```console
+$ sudo chage -E 2020-03-28 emma
+```
+
+В качестве альтернативы суперпользователь может использовать:
+
+```console
+$ sudo passwd -l emma
+```
+
+для временной блокировки учетной записи с помощью параметра `-l` для `passwd`. Чтобы проверить влияние этих изменений, попробуйте войти в систему под учетной записью `emma`:
+
+```console
+$ sudo login emma
+Password:
+Your account has expired; please contact your system administrator
+
+Authentication failure
+```
+
+Чтобы запретить всем пользователям, кроме пользователя `root`, временно войти в систему, суперпользователь может создать файл с именем `/etc/nologin`. Этот файл может содержать сообщение для пользователей, уведомляющее их о том, почему они не могут войти в систему (например, уведомления о техническом обслуживании системы). Подробнее см. `man 5 nologin`. Обратите внимание, что есть также команда `nologin`, которую можно использовать для предотвращения входа в систему, если она установлена в качестве оболочки по умолчанию для пользователя. Например:
+
+```console
+$ sudo usermod -s /sbin/nologin emma
+```
+
+Подробнее см. `man 8 nologin`.
+
+
+## Как использовать Superdaemon для прослушивания входящих сетевых подключений
+
+Сетевые службы, такие как веб-серверы, почтовые серверы и серверы печати, обычно работают как автономная служба, прослушивающая выделенный сетевой порт. Все эти автономные службы работают параллельно. В классической системе на основе Sys-V-init каждой из этих служб можно управлять с помощью команд `service`. В текущих системах на основе systemd вы должны использовать `systemctl` для управления службой. 
+
+В прежние времена наличие компьютерных ресурсов было намного меньше. Запускать многие службы в автономном режиме в тандеме было не лучшим вариантом. Вместо этого использовался так называемый супердемон, который прослушивал входящие сетевые соединения и запускал соответствующую службу по запросу. Этот метод построения сетевого подключения занял немного больше времени. Хорошо известными супердемонами являются `inetd` и `xinetd`. В современных системах, основанных на `systemd`, аналогичным образом можно использовать модуль `systemd.socket`. В этом разделе мы будем использовать `xinetd` для перехвата подключений к демону `sshd` и запускать этот демон по запросу, чтобы продемонстрировать, как использовался супердемон. 
+
+Перед настройкой службы `xinetd` необходима некоторая подготовка. Неважно, используете ли вы систему на основе Debian или Red Hat. Хотя эти объяснения были протестированы с Debian/GNU Linux 9.9, они должны работать в любой текущей системе Linux с `systemd` без каких-либо существенных изменений. Сначала убедитесь, что установлены пакеты `openssh-server` и `xinetd`. Теперь убедитесь, что служба SSH работает с:
+
