Update 110.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
@@ -116,7 +116,7 @@ sshd    1194 root    4u  IPv6 16053270      0t0  TCP *:ssh (LISTEN)
 $ sudo systemctl stop sshd.service
 ```
 
-В случае, если вы хотите сделать это изменение постоянным и выжить после перезагрузки, используйте `systemctl disable sshd.service`. 
+В случае, если вы хотите сделать это изменение постоянным и сохраненным после перезагрузки, используйте `systemctl disable sshd.service`. 
 
 Теперь вы можете создать файл конфигурации `xinetd /etc/xinetd.d/ssh` с некоторыми базовыми настройками:
 
