Update 110.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
@@ -118,7 +118,7 @@ $ sudo systemctl stop sshd.service
 
 В случае, если вы хотите сделать это изменение постоянным и сохраненным после перезагрузки, используйте `systemctl disable sshd.service`. 
 
-Теперь вы можете создать файл конфигурации `xinetd /etc/xinetd.d/ssh` с некоторыми базовыми настройками:
+Теперь вы можете создать файл конфигурации xinetd `/etc/xinetd.d/ssh` с некоторыми базовыми настройками:
 
 ```console
 service ssh
@@ -269,3 +269,164 @@ systemd   1 root   57u  IPv6 14730112      0t0  TCP *:22 (LISTEN)
 
 ## Проверка служб на наличие ненужных демонов
 
+По соображениям безопасности, а также для контроля системных ресурсов важно иметь представление о том, какие службы работают. Ненужные и неиспользуемые сервисы следует отключить. Например, если вам не нужно распространять веб-страницы, нет необходимости запускать веб-сервер, такой как Apache или nginx. 
+
+В системах на основе SyS-V-init вы можете проверить статус всех служб с помощью следующего:
+
+```console
+$ sudo service --status-all
+```
+
+Убедитесь, что каждая из служб, перечисленных в выводе команды, необходима, и отключите все ненужные службы с помощью (для систем на основе Debian):
+
+```console
+$ sudo update-rc.d SERVICE-NAME remove
+```
+
+Или в системах на базе Red Hat вы могли бы использовать:
+
+```console
+$ sudo chkconfig SERVICE-NAME off
+```
+
+В современных системах на основе systemd мы можем использовать следующее, чтобы перечислить все запущенные службы:
+
+```console
+$ systemctl list-units --state active --type service
+```
+
+Затем вы отключите каждую ненужную служебную единицу с помощью:
+
+```console
+$ sudo systemctl disable UNIT --now
+```
+
+Эта команда остановит службу и удалит ее из списка служб, чтобы предотвратить ее запуск при следующей загрузке системы. 
+
+Кроме того, чтобы получить обзор прослушивающих сетевых служб, вы можете использовать `netstat` в более старых системах (при условии, что у вас установлен пакет `net-tools`):
+
+```console
+$ netstat -ltu
+Active Internet connections (only servers)
+Proto Recv-Q Send-Q Local Address           Foreign Address         State
+tcp        0      0 0.0.0.0:ssh             0.0.0.0:*               LISTEN
+tcp        0      0 localhost:mysql         0.0.0.0:*               LISTEN
+tcp6       0      0 [::]:http               [::]:*                  LISTEN
+tcp6       0      0 [::]:ssh                [::]:*                  LISTEN
+udp        0      0 0.0.0.0:bootpc          0.0.0.0:*
+```
+
+Или в современных системах вы можете использовать эквивалентную команду `ss` (для «служб сокетов»):
+
+```console
+$ ss -ltu
+Netid      State         Recv-Q        Send-Q      Local Address:Port           Peer Address:Port
+udp        UNCONN        0             0                 0.0.0.0:bootpc              0.0.0.0:*
+tcp        LISTEN        0             128               0.0.0.0:ssh                 0.0.0.0:*
+tcp        LISTEN        0             80              127.0.0.1:mysql               0.0.0.0:*
+tcp        LISTEN        0             128                     *:http                      *:*
+tcp        LISTEN        0             128                  [::]:ssh                    [::]:*
+```
+
+
+## TCP-оболочки как своего рода простой брандмауэр
+
+Во времена, когда для Linux не было доступных брандмауэров, для защиты сетевых подключений к хосту использовались TCP-оболочки. В настоящее время многие программы больше не подчиняются оболочкам TCP. В последних дистрибутивах, основанных на Red Hat (например, Fedora 29), поддержка оберток TCP была полностью удалена. Для поддержки устаревших систем Linux, которые все еще используют оболочки TCP, полезно иметь некоторые базовые знания об этой конкретной технологии. 
+
+Мы еще раз будем использовать службу SSH в качестве базового примера. Служба на нашем примере хоста должна быть доступна только из локальной сети. Сначала мы проверяем, использует ли демон SSH библиотеку `libwrap`, которая предлагает поддержку TCP-оболочек:
+
+```console
+$ ldd /usr/sbin/sshd | grep "libwrap"
+        libwrap.so.0 => /lib/x86_64-linux-gnu/libwrap.so.0 (0x00007f91dbec0000)
+```
+
+Теперь добавляем в файл `/etc/hosts.deny` следующую строку:
+
+```console
+sshd: ALL
+```
+
+Наконец, мы настраиваем исключение в файле `/etc/hosts.allow` для SSH-соединений из локальной сети:
+
+```console
+sshd: LOCAL
+```
+
+Изменения вступают в силу немедленно, перезапускать какую-либо службу не требуется. Вы можете проверить это с помощью клиента `ssh`.
+
+
+## Упражнения для закрепления
+
+1. Как можно разблокировать ранее заблокированную учетную запись `emma`? 
+2. Ранее для учетной записи `emma` была установлена дата истечения срока действия. Как можно установить срок годности никогда? 
+3. Представьте, что служба печати CUPS, обрабатывающая задания на печать, не нужна на вашем сервере. Как можно отключить услугу навсегда? Как вы можете проверить, что соответствующий порт больше не активен? 
+4. Вы установили веб-сервер nginx. Как вы можете проверить, поддерживает ли nginx TCP-оболочки?
+
+
+## Упражнения на размышление
+
+1. Проверить, предотвращает ли существование файла `/etc/nologin` вход пользователя root? 
+2. Предотвращает ли существование файла `/etc/nologin` вход без пароля с ключами SSH? 
+3. Что происходит при входе в систему, когда файл `/etc/nologin` содержит эту строку текста, в настоящее время только вход в систему невозможен? 
+4. Может ли обычный пользователь `emma` получить информацию о корневом каталоге пользователя, содержащемся в файле `/etc/passwd`, например: командой `grep root /etc/passwd`? 
+5. Может ли обычный пользователь `emma` получить информацию о своем собственном хешированном пароле, содержащемся в файле `/etc/shadow`, например командой `grep emma /etc/shadow`? 
+6. Какие шаги необходимо предпринять, чтобы включить и проверить древнюю дневную службу, которую должен обрабатывать `xinetd`? Обратите внимание, что это всего лишь экспериментальное упражнение, не делайте этого в производственной среде.
+
+
+## Резюме
+
+Из этого урока вы узнали: 
+1. В каком файле хранятся пароли, а также некоторые настройки безопасности паролей, например время окончания срока действия. 
+2. Назначение superdaemon `xinetd` и способы его запуска и запуска службы `sshd` по запросу. 
+3. Чтобы проверить, какие сетевые службы работают и как отключить ненужные службы. 
+4. Используйте TCP-оболочки как своего рода простой брандмауэр. 
+
+Команды, используемые в лаборатории и упражнениях:  
+
+`chage`  
+Измените возраст пароля пользователя. 
+
+`chkconfig`  
+Классическая команда, изначально использовавшаяся в системах на базе Red Hat, чтобы установить, будет ли служба запускаться во время загрузки или нет. 
+
+`netstat`  
+Классическая утилита (теперь в пакете `net-tools`), которая отображает демонов, обращающихся к сетевым портам в системе, и их использование. 
+
+`nologin`  
+Команда, которую можно использовать вместо оболочки пользователя, чтобы предотвратить вход в систему. 
+
+`password`  
+Используется для создания или изменения пароля пользователя. 
+
+`service`  
+Старый метод управления статусом демона, например остановка или запуск службы. 
+
+`SS`  
+Современный эквивалент `netstat`, но также отображает дополнительную информацию о различных сокетах, используемых в системе. 
+
+`systemctl`  
+Команда управления системой, используемая для управления различными аспектами служб и сокетов на компьютере с помощью `systemd`. 
+
+`update-rc.d`  
+Классическая команда, похожая на `chkconfig`, которая включает или отключает запуск системы во время загрузки в дистрибутивах на основе Debian. 
+
+`xinetd`  
+Супердемон, который может контролировать доступ к сетевой службе по запросу, оставляя службу неактивной до тех пор, пока она не будет вызвана для выполнения некоторой задачи.
+
+
+## Ответы на упражнения для закрепления
+
+1. Как можно разблокировать ранее заблокированную учетную запись `emma`? 
+2. Ранее для учетной записи `emma` была установлена дата истечения срока действия. Как можно установить срок годности никогда? 
+3. Представьте, что служба печати CUPS, обрабатывающая задания на печать, не нужна на вашем сервере. Как можно отключить услугу навсегда? Как вы можете проверить, что соответствующий порт больше не активен? 
+4. Вы установили веб-сервер nginx. Как вы можете проверить, поддерживает ли nginx TCP-оболочки?
+
+
+## Ответы на упражнения для размышления
+
+1. Проверить, предотвращает ли существование файла `/etc/nologin` вход пользователя root? 
+2. Предотвращает ли существование файла `/etc/nologin` вход без пароля с ключами SSH? 
+3. Что происходит при входе в систему, когда файл `/etc/nologin` содержит эту строку текста, в настоящее время только вход в систему невозможен? 
+4. Может ли обычный пользователь `emma` получить информацию о корневом каталоге пользователя, содержащемся в файле `/etc/passwd`, например: командой `grep root /etc/passwd`? 
+5. Может ли обычный пользователь `emma` получить информацию о своем собственном хешированном пароле, содержащемся в файле `/etc/shadow`, например командой `grep emma /etc/shadow`? 
+6. Какие шаги необходимо предпринять, чтобы включить и проверить древнюю дневную службу, которую должен обрабатывать `xinetd`? Обратите внимание, что это всего лишь экспериментальное упражнение, не делайте этого в производственной среде.
