Update 110.2 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.2 Setup host security/110.2 Lesson 1.md
@@ -416,17 +416,45 @@ sshd: LOCAL
 
 ## Ответы на упражнения для закрепления
 
-1. Как можно разблокировать ранее заблокированную учетную запись `emma`? 
-2. Ранее для учетной записи `emma` была установлена дата истечения срока действия. Как можно установить срок годности никогда? 
-3. Представьте, что служба печати CUPS, обрабатывающая задания на печать, не нужна на вашем сервере. Как можно отключить услугу навсегда? Как вы можете проверить, что соответствующий порт больше не активен? 
-4. Вы установили веб-сервер nginx. Как вы можете проверить, поддерживает ли nginx TCP-оболочки?
+**1. Как можно разблокировать ранее заблокированную учетную запись `emma`?**  
+Суперпользователь может запустить команду `passwd -u emma`, чтобы разблокировать учетную запись.
+
+**2. Ранее для учетной записи `emma` была установлена дата истечения срока действия. Как можно установить срок годности `never`?**  
+Суперпользователь может использовать `chage -E -1 emma`, чтобы установить срок годности никогда. Этот параметр можно проверить с помощью `chage -l emma`.
+
+**3. Представьте, что служба печати CUPS, обрабатывающая задания на печать, не нужна на вашем сервере. Как можно отключить услугу навсегда? Как вы можете проверить, что соответствующий порт больше не активен?**  
+```console
+systemctl disable cups.service --now
+```
+Теперь вы можете проверить
+```console
+netstat -l | grep ":ipp "` or `ss -l | grep ":ipp "
+```
+
+**4. Вы установили веб-сервер nginx. Как вы можете проверить, поддерживает ли nginx TCP-оболочки?**  
+```console
+ldd /usr/sbin/nginx | grep "libwrap"
+```
+покажет запись, если nginx поддерживает TCP-оболочки.
 
 
 ## Ответы на упражнения для размышления
 
-1. Проверить, предотвращает ли существование файла `/etc/nologin` вход пользователя root? 
-2. Предотвращает ли существование файла `/etc/nologin` вход без пароля с ключами SSH? 
-3. Что происходит при входе в систему, когда файл `/etc/nologin` содержит эту строку текста, в настоящее время только вход в систему невозможен? 
-4. Может ли обычный пользователь `emma` получить информацию о корневом каталоге пользователя, содержащемся в файле `/etc/passwd`, например: командой `grep root /etc/passwd`? 
-5. Может ли обычный пользователь `emma` получить информацию о своем собственном хешированном пароле, содержащемся в файле `/etc/shadow`, например командой `grep emma /etc/shadow`? 
-6. Какие шаги необходимо предпринять, чтобы включить и проверить древнюю дневную службу, которую должен обрабатывать `xinetd`? Обратите внимание, что это всего лишь экспериментальное упражнение, не делайте этого в производственной среде.
+**1. Проверить, предотвращает ли существование файла `/etc/nologin` вход пользователя root?**  
+Пользователь `root` по-прежнему может войти в систему.
+
+**2. Предотвращает ли существование файла `/etc/nologin` вход без пароля с ключами SSH?**  
+Да, также запрещены входы в систему без пароля.
+
+**3. Что происходит при входе в систему, когда файл `/etc/nologin` содержит эту строку текста, `login currently is not possible only`?**  
+Будет показано сообщение, в настоящее время вход в систему невозможен, и вход в систему запрещен.
+
+**4. Может ли обычный пользователь `emma` получить информацию о корневом каталоге пользователя, содержащемся в файле `/etc/passwd`, например: командой `grep root /etc/passwd`?**  
+Да, потому что все пользователи имеют разрешение на чтение этого файла.
+
+**5. Может ли обычный пользователь `emma` получить информацию о своем собственном хешированном пароле, содержащемся в файле `/etc/shadow`, например командой `grep emma /etc/shadow`?**  
+Нет, потому что у обычных пользователей нет прав на чтение этого файла.
+
+
+**6. Какие шаги необходимо предпринять, чтобы включить и проверить древнюю дневную службу, которую должен обрабатывать `xinetd`? Обратите внимание, что это всего лишь экспериментальное упражнение, не делайте этого в производственной среде.**  
+Сначала измените файл `/etc/xinetd.d/daytime` и установите директиву `disable = no`. Во-вторых, перезапустите службу `xinetd systemctl restart xinetd.service` (или `service xinetd restart` в системах с SyS-V-Init). Теперь вы можете проверить, работает ли `nc localhost daytime`. Вместо `nc` вы также можете использовать `ncat`.
