Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -10,4 +10,38 @@
 
 ## Введение
 
-Оболочка, возможно, является самым мощным инструментом в системе Linux и может быть определена как интерфейс между пользователем и ядром операционной системы. Он интерпретирует команды, введенные пользователем. Следовательно, все системные администраторы должны иметь опыт работы с оболочкой. Как мы уже наверняка знаем, Bourne Again Shell (Bash) де-факто является оболочкой для подавляющего большинства дистрибутивов Linux. После запуска первое, что делает Bash - или любая другая оболочка, если на то пошло - выполняет серию сценариев запуска. Эти сценарии настраивают среду сеанса. Существуют как общесистемные, так и пользовательские скрипты. Мы можем поместить в эти сценарии свои личные предпочтения или настройки, которые лучше всего соответствуют потребностям наших пользователей, в форме переменных, псевдонимов и функций. Точная серия файлов запуска зависит от очень важного параметра: типа оболочки. Давайте посмотрим на разнообразие существующих оболочек.
+Оболочка, возможно, является самым мощным инструментом в системе Linux и может быть определена как интерфейс между пользователем и ядром операционной системы. Она интерпретирует команды, введенные пользователем. Следовательно, все системные администраторы должны иметь опыт работы с оболочкой. Как мы уже наверняка знаем, Bourne Again Shell (*Bash*) *де-факто* является оболочкой для подавляющего большинства дистрибутивов Linux. 
+
+После запуска первое, что делает Bash - или любая другая оболочка, если на то пошло - выполняет серию сценариев запуска. Эти сценарии настраивают среду сеанса. Существуют как общесистемные, так и пользовательские скрипты. Мы можем поместить в эти сценарии свои личные предпочтения или настройки, которые лучше всего соответствуют потребностям наших пользователей, в форме переменных, псевдонимов и функций. 
+
+Точная серия файлов запуска зависит от очень важного параметра: типа оболочки. Давайте посмотрим на разнообразие существующих оболочек.
+
+
+## Типы оболочки: интерактивное против неинтерактивного и входа в систему против входа без входа
+
+Для начала давайте проясним концепции *интерактивности* и *входа* в систему в контексте оболочек: 
+
+Интерактивные/неинтерактивные оболочки  
+Этот вид оболочки относится к взаимодействию, которое происходит между пользователем и оболочкой: пользователь обеспечивает ввод, вводя команды в терминал с помощью клавиатуры; оболочка обеспечивает вывод, выводя сообщения на экран. 
+
+Оболочки входа/без входа  
+Этот вид оболочки относится к событию, когда пользователь обращается к компьютерной системе, предоставляя свои учетные данные, такие как имя пользователя и пароль. 
+
+Как интерактивные, так и неинтерактивные оболочки могут быть как для входа, так и без входа, и любая возможная комбинация этих типов имеет свое конкретное применение. 
+
+*Интерактивные оболочки входа в систему* выполняются, когда пользователи входят в систему, и используются для настройки конфигураций пользователей в соответствии с их потребностями. Хорошим примером этого типа оболочки может быть группа пользователей, принадлежащих к одному отделу, которым требуется конкретная переменная, установленная в их сеансах. 
+
+Под *интерактивными оболочками без входа в систему* мы понимаем любые другие оболочки, открытые пользователем после входа в систему. Пользователи используют эти оболочки во время сеансов для выполнения задач обслуживания и администрирования, таких как установка переменных, времени, копирование файлов, написание сценариев и т. д. 
+
+С другой стороны, *неинтерактивные оболочки* не требуют какого-либо взаимодействия с человеком. Таким образом, эти оболочки не запрашивают у пользователя ввод, а их вывод, если таковой имеется, в большинстве случаев записывается в журнал. 
+
+*Неинтерактивные оболочки входа в систему* довольно редки и непрактичны. Их использование практически не существует, и мы будем комментировать их только для понимания поведения оболочки. Некоторые странные примеры включают принудительный запуск сценария из оболочки входа с помощью `/bin/bash --login <some_script>` или передачу стандартного вывода (`stdout`) команды на стандартный ввод (`stdin`) ssh-соединения:
+
+```console
+<some_command> | ssh <some_user>@<some_server>
+```
+
+Что *касается неинтерактивной оболочки без входа в систему*, то здесь нет ни взаимодействия, ни входа в систему от имени пользователя, поэтому здесь мы имеем в виду использование автоматизированных сценариев. Эти скрипты в основном используются для выполнения повторяющихся задач администрирования и обслуживания, например, тех, которые включены в cronjobs. В таких случаях `bash` не читает файлы запуска.
+
+
+## Открытие терминала
