Update 105.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 105: Shells and Shell Scripting/105.1 Customize and use the shell environment/105.1 Lesson 1.md
@@ -45,3 +45,37 @@
 
 
 ## Открытие терминала
+
+Когда мы находимся в среде рабочего стола, мы можем либо открыть приложение терминала, либо переключиться на одну из системных консолей. Следовательно, новая оболочка является либо оболочкой `pts` при открытии из эмулятора терминала в графическом интерфейсе пользователя, либо оболочкой `tty` при запуске из системной консоли. В первом случае мы имеем дело не с терминалом, а с эмулятором терминала. В рамках графических сеансов эмуляторы терминалов, такие как *gnome-terminal* или *konsole*, очень многофункциональны и удобны для пользователя по сравнению с терминалами с текстовым интерфейсом пользователя. Менее функциональные эмуляторы терминала включают, среди прочего, *XTerm* и *sakura*. 
+
+Используя комбинации <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>-<kbd>F6</kbd>, мы можем перейти к логинам консоли, которые открывают интерактивную текстовую оболочку входа. <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F7</kbd> вернет сеанс обратно на рабочий стол.
+
+>`tty` - телетайп; `pts` обозначает псевдотерминальное ведомое устройство. Для получения дополнительной информации: `man tty` и `man pts`
+
+
+## Запуск оболочек с помощью `bash`
+
+После входа в систему введите `bash` в терминал, чтобы открыть новую оболочку. Технически эта оболочка является дочерним процессом текущей оболочки. 
+
+При запуске дочернего процесса `bash` мы можем указать различные переключатели, чтобы определить, какую оболочку мы хотим запустить. Вот некоторые важные параметры вызова `bash`: 
+
+`bash -l` или `bash --login`  
+вызовет оболочку входа в систему. 
+
+`bash -i`  
+вызовет интерактивную оболочку. 
+
+`bash --noprofile`  
+с оболочками входа в систему будут игнорировать как общесистемный файл запуска `/etc/profile`, так и файлы запуска уровня пользователя `~/.bash_profile`, `~/.bash_login` и `~/.profile`
+
+`.bash --norc`  
+с интерактивными оболочками игнорирует как общесистемный файл запуска `/etc/bash.bashrc`, так и файл запуска уровня пользователя `~/.bashrc`. 
+
+`bash --rcfile <file>`  
+с интерактивными оболочками будет использовать `<file>` в качестве файла запуска, игнорируя общесистемный `/etc/bash.bashrc` и пользовательский уровень `~/.bashrc`. 
+
+Ниже мы обсудим различные файлы запуска.
+
+
+## Запуск оболочек с помощью `su` и `sudo`
+
